--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
   <main class="container">
     <h1>FPL Mini League</h1>
-    <p class="meta">Setup OK. Data feed coming next.</p>
+    <p class="meta">Loading…</p>
     <div class="table-wrap">
       <table id="league-table">
-        <thead id="thead"><tr><th>Team</th><th>Total</th></tr></thead>
-        <tbody id="tbody"><tr><td>Example Team</td><td>1234</td></tr></tbody>
+        <thead id="thead"></thead>
+        <tbody id="tbody"></tbody>
       </table>
     </div>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
