--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <main class="container">
     <h1>FPL Mini League</h1>
-    <p class="meta">Loading…</p>
+    <p class="meta">
+      GW loading… • Last update: <span id="last-update">—</span>
+    </p>
     <div class="table-wrap">
       <table id="league-table">
         <thead id="thead"></thead>
